# vaultquest

./: .coderabbit.yaml  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Provider.jsx  README.md  WALLET_DISCONNECT_TEST_CHECKLIST.md  apply-vaultquest-fixes.sh  audio_directions.md  b64.tmp  next-i18next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  script.md  shot_list.md  storyboard.md  subtitles.srt  tailwind.config.js  tailwind.config.js.rej  vaultquest-issues-245-246-248-249-v2.bundle  vaultquest-issues-245-246-248-249-v2.patch  vaultquest-issues-245-246-248-249.patch  vercel.json  vitest.config.mjs
.github/: dependabot.yml  pull_request_template.md
app/: layout.js  layout.jsx  not-found.jsx  page.js  page.jsx
backend/: .env.example  .eslintrc.cjs  MIGRATION_REFACTOR_SUMMARY.md  PROMETHEUS_SETUP.md  README.md  docker-compose.monitoring.yml  package-lock.json  (+5 more)
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs
contracts/vault/test_snapshots/tests/: test_admin_can_pause.1.json  test_admin_can_unpause.1.json  test_deposit_reverts_when_paused.1.json  test_deposit_works_when_not_paused.1.json  test_double_pause_reverts.1.json  test_draw_winner_reverts_when_paused.1.json  test_draw_winner_works_when_not_paused.1.json  test_non_admin_cannot_pause.1.json  test_total_deposits_tracks_correctly.1.json  test_unpause_when_not_paused_reverts.1.json  test_withdraw_more_than_balance_reverts.1.json  test_withdraw_works_when_not_paused.1.json  test_withdraw_works_when_paused.1.json
(+410 files in other folders)
